<resources>
    <string name="app_name">MessageNWishes</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="congratulations">Congratulations</string>
    <string name="enter_name">Enter Name</string>
    <string name="send">SEND</string>
    <string name="add_event">ADD EVENT</string>
    <string name="delete_all">Delete All</string>
    <string name="event">Event?</string>
    <string name="submit">Submit</string>
    <string name="show_events">SHOW EVENTS</string>
    <string name="refresh_list">REFRESH LIST</string>
</resources>
